fix separator alignment issue on Edge

--- a/src/scss/components/_separator.scss
+++ b/src/scss/components/_separator.scss
@@ -1,8 +1,8 @@
 .separator {
-  width: 6rem;
+  width: 8rem;
   border: 0;
   height: 0.4rem;
-
+  text-align: left;
   &--black {
     background-color: $color-black;
   }
